# phone-to-clipboard

./: .gitignore  README.md  pyproject.toml  run.sh
app/: auth.py  clipboard.py  images.py  main.py  net.py
scripts/: setup-mkcert.sh  smoke.sh
systemd/: airdrop-linux.service
tests/: conftest.py  test_auth.py  test_clipboard.py  test_images.py  test_upload.py
web/: app.js  index.html  manifest.webmanifest  sw.js
