[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airdrop-linux"
version = "0.1.0"
description = "iPhone → Linux clipboard over local Wi-Fi"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.3.0",
    "pillow-heif>=0.16.0",
    "qrcode[pil]>=7.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
phone-to-clipboard = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Disable ROS / ament pytest plugins that conflict on ROS-installed systems
addopts = [
    "-p", "no:launch-testing-ros",
    "-p", "no:ament-pep257",
    "-p", "no:ament-copyright",
    "-p", "no:ament-flake8",
    "-p", "no:ament-lint",
    "-p", "no:ament-xmllint",
]
